--- a/calculator-design.css
+++ b/calculator-design.css
@@ -1,6 +1,7 @@
 .background {
     background: linear-gradient(to right, purple, black);
     height: 100vh;
+    display: flex !important;
 }
 
  table , input  {
@@ -9,8 +10,6 @@
 input {
     width: 100%;
     height: 200px;
-    /* text-align: right;
-    direction: rtl; */
 }
 td{
     height:70px !important;
